--- a/.example.env
+++ b/.example.env
@@ -1,44 +1,46 @@
-
-# -------- Server Basics --------
-PORT=3004
+# =========================
+# Client (Next.js) - FRONTEND
+# =========================
+PORT=3001
 NODE_ENV=development
-
-# CORS / Client Origin (React client URL)
-CLIENT_ORIGIN=http://localhost:3001
+NEXT_PUBLIC_API_BASE_PATH=/ai-video
 NEXT_PUBLIC_APP_ORIGIN=http://localhost:3001
 
-# -------- Database --------
-# Prefer a single connection string:
-MONGODB_URI=mongodb://localhost:27017/ai-videogen
-# Or discrete fields (ignored if MONGODB_URI is set):
-DB_CONNECTION=mongodb
-DB_HOST=localhost
-DB_PORT=27017
-DB_DATABASE=ai-videogen
-DB_USERNAME=
-DB_PASSWORD=
-# Optional collection name prefix
-COLLECTION_PREFIX=ai_vg
+# Optional (legacy/CRA compatibility)
+REACT_APP_API_BASE_PATH=/ai-video
+REACT_APP_WEAM_APP_URL=https://app.weam.ai
 
-# -------- Auth/Cookies --------
+
+# =========================
+# Server (AI-VideoGen API) - BACKEND
+# =========================
+# CORS: frontend origin
+CLIENT_ORIGIN=http://localhost:3001
+
+# Backend port (server reads BACKEND_PORT first, then PORT, then 5000)
+BACKEND_PORT=3004
+
+# Providers (set keys to enable providers in dropdown)
+RUNWAY_API_KEY=your_runway_api_key
+BANANA_API_KEY=
+VEO3_API_KEY=
+
+# Gemini (chat prompt analysis/enhancement)
+GEMINI_API_KEY=your_gemini_api_key
+
+# Database (prefer a single URI)
+MONGODB_URI=mongodb://localhost:27017/ai-videogen
+# Or alternatively (leave commented if using MONGODB_URI)
+# DB_CONNECTION=mongodb
+# DB_HOST=localhost
+# DB_PORT=27017
+# DB_DATABASE=ai-videogen
+# DB_USERNAME=
+# DB_PASSWORD=
+
+# Optional namespacing for collections
+# COLLECTION_PREFIX=ai_vg
+
+# Weam session cookie (server-side)
 WEAM_COOKIE_NAME=weam
 WEAM_COOKIE_PASSWORD=replace-with-32-characters-min
-NEXT_PUBLIC_COOKIE_NAME=weam
-NEXT_PUBLIC_COOKIE_PASSWORD=replace-with-32-characters-min
-
-# -------- External Services --------
-# Runway (required for Runway Gen-4 Turbo and Veo3 via Runway)
-RUNWAY_API_KEY=
-# Gemini (used for prompt analysis/enhancement in chat)
-GEMINI_API_KEY=
-# Direct Veo3 provider (optional) – enables green dot for Veo3
-VEO3_API_KEY=
-# Banana provider (optional) – enables green dot for Banana
-BANANA_API_KEY=
-
-# -------- Client (React) --------
-# Keep these in sync with routing
-REACT_APP_API_BASE_PATH=/ai-video
-NEXT_PUBLIC_API_BASE_PATH=/ai-video
-# External app link visible in header (optional)
-REACT_APP_WEAM_APP_URL=https://app.weam.ai
