added single env

--- a/.example.env
+++ b/.example.env
@@ -1,44 +1,33 @@
-
-# -------- Server Basics --------
-PORT=3004
+# Frontend port
+FRONTEND_PORT=3001
 NODE_ENV=development
-
-# CORS / Client Origin (React client URL)
-CLIENT_ORIGIN=http://localhost:3001
+NEXT_PUBLIC_API_BASE_PATH=/ai-video
 NEXT_PUBLIC_APP_ORIGIN=http://localhost:3001
 
-# -------- Database --------
-# Prefer a single connection string:
-MONGODB_URI=mongodb://localhost:27017/ai-videogen
-# Or discrete fields (ignored if MONGODB_URI is set):
-DB_CONNECTION=mongodb
-DB_HOST=localhost
-DB_PORT=27017
-DB_DATABASE=ai-videogen
-DB_USERNAME=
-DB_PASSWORD=
-# Optional collection name prefix
-COLLECTION_PREFIX=ai_vg
+# Backend port
+BACKEND_PORT=3004
 
-# -------- Auth/Cookies --------
-WEAM_COOKIE_NAME=weam
-WEAM_COOKIE_PASSWORD=replace-with-32-characters-min
-NEXT_PUBLIC_COOKIE_NAME=weam
-NEXT_PUBLIC_COOKIE_PASSWORD=replace-with-32-characters-min
+# Weam cookies
+WEAM_COOKIE_NAME=
+WEAM_COOKIE_PASSWORD=
 
-# -------- External Services --------
-# Runway (required for Runway Gen-4 Turbo and Veo3 via Runway)
-RUNWAY_API_KEY=
-# Gemini (used for prompt analysis/enhancement in chat)
-GEMINI_API_KEY=
-# Direct Veo3 provider (optional) – enables green dot for Veo3
-VEO3_API_KEY=
-# Banana provider (optional) – enables green dot for Banana
+# CORS
+CLIENT_ORIGIN=http://localhost:3001
+
+# Providers
 BANANA_API_KEY=
+VEO3_API_KEY=
+RUNWAY_API_KEY=
 
-# -------- Client (React) --------
-# Keep these in sync with routing
-REACT_APP_API_BASE_PATH=/ai-video
-NEXT_PUBLIC_API_BASE_PATH=/ai-video
-# External app link visible in header (optional)
-REACT_APP_WEAM_APP_URL=https://app.weam.ai
+# Database
+MONGODB_URI=
+DB_CONNECTION=
+DB_HOST=
+DB_DATABASE=
+DB_USERNAME=
+DB_PORT=
+DB_PASSWORD=
+
+
+#COLLECTION_PREFIX=solution_aivideo
+GEMINI_API_KEY=
