--- a/.example.env
+++ b/.example.env
@@ -1,33 +1,32 @@
-# Frontend port
-FRONTEND_PORT=3001
+# Frontend (hardcoded to 3008)
 NODE_ENV=development
 NEXT_PUBLIC_API_BASE_PATH=/ai-video
-NEXT_PUBLIC_APP_ORIGIN=http://localhost:3001
+NEXT_PUBLIC_APP_ORIGIN=http://localhost:3008
 
-# Backend port
-BACKEND_PORT=3004
+# Backend
+BACKEND_PORT=3009
 
 # Weam cookies
-WEAM_COOKIE_NAME=
-WEAM_COOKIE_PASSWORD=
+WEAM_COOKIE_NAME=weam
+WEAM_COOKIE_PASSWORD=replace-with-32-characters-min
 
-# CORS
-CLIENT_ORIGIN=http://localhost:3001
+# CORS (frontend origin)
+CLIENT_ORIGIN=http://localhost:3008
 
 # Providers
 BANANA_API_KEY=
 VEO3_API_KEY=
-RUNWAY_API_KEY=
+RUNWAY_API_KEY=your_runway_api_key
 
 # Database
-MONGODB_URI=
-DB_CONNECTION=
-DB_HOST=
-DB_DATABASE=
-DB_USERNAME=
-DB_PORT=
-DB_PASSWORD=
+MONGODB_URI=mongodb://localhost:27017/ai-videogen
+# DB_CONNECTION="mongodb+srv"
+# DB_HOST=""
+# DB_DATABASE=""
+# DB_USERNAME=""
+# DB_PORT=
+# DB_PASSWORD=""
 
-
-#COLLECTION_PREFIX=solution_aivideo
-GEMINI_API_KEY=
+# Optional
+# COLLECTION_PREFIX=ai_vg
+GEMINI_API_KEY=your_gemini_api_key
